+++++++++++
Python News
+++++++++++

What's New in Python 2.7.9?
==========================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------

- Issue #1730136: Fix the comparison between a tkFont.Font and an object of
  another kind.

- Issue #19884: readline: Disable the meta modifier key if stdout is not
  a terminal to not write the ANSI sequence "\033[1034h" into stdout. This
  sequence is used on some terminal (ex: TERM=xterm-256color") to enable
  support of 8 bit characters.

- Issue #22017: Correct reference counting errror in the initialization of the
  _warnings module.

- Issue #21868: Prevent turtle crash when undo buffer set to a value less
  than one.

- Issue #21151: Fixed a segfault in the _winreg module when ``None`` is passed
  as a ``REG_BINARY`` value to SetValueEx.  Patch by John Ehresman.

- Issue #21090: io.FileIO.readall() does not ignore I/O errors anymore. Before,
  it ignored I/O errors if at least the first C call read() succeed.

- Issue #19870: BaseCookie now parses 'secure' and 'httponly' flags.
  Backport of issue #16611.

- Issue #21923: Prevent AttributeError in distutils.sysconfig.customize_compiler
  due to possible uninitialized _config_vars.

- Issue #21323: Fix CGIHTTPServer to again handle scripts in CGI subdirectories,
  broken by the fix for security issue #19435.  Patch by Zach Byrne.

Tests
-----

- Issue #21976: Fix test_ssl to accept LibreSSL version strings.  Thanks
  to William Orr.

Build
-----

- Issue #15759: "make suspicious", "make linkcheck" and "make doctest" in Doc/
  now display special message when and only when there are failures.


What's New in Python 2.7.8?
===========================

*Release date: 2014-06-29*

Core and Builtins
-----------------

- Issue #4346: In PyObject_CallMethod and PyObject_CallMethodObjArgs, don't
  overwrite the error set in PyObject_GetAttr.

- Issue #21831: Avoid integer overflow when large sizes and offsets are given to
  the buffer type.
