@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #16133: The asynchat.async_chat.handle_read() method now ignores
+  socket.error() exceptions with blocking I/O errors: EAGAIN, EALREADY,
+  EINPROGRESS, or EWOULDBLOCK.
+
 - Issue #1730136: Fix the comparison between a tkFont.Font and an object of
   another kind.
 
